--- a/style.css
+++ b/style.css
@@ -87,3 +87,27 @@
 .about-inner > p {
     margin-bottom: 1rem;
 }
+
+.box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 1.5rem;
+}
+
+.box div:nth-child(1) {
+    font-size: 14px;
+    font-weight: 600;
+    color: #3b2205;
+}
+
+.right-section h2 {
+    margin-bottom: .5rem;
+    color: #794c19;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.box div:nth-child(2) p {
+    padding-left: 5px;
+    border-left: 2px solid #794c19;
+}
